package model;

public interface DisplayElement {
    
    void actualizar(Distrito distrito, String evento);

}
