package model;

public class DistritoDos extends Distrito {	
	public DistritoDos() {
		proyectos.add("Parque Central");
		proyectos.add("Mejoras de Alumbrado");
		proyectos.add("Renovación de Plaza");
	}
}
