package model;

public class DistritoUno extends Distrito {
	public DistritoUno() {
		proyectos.add("Expansión del Parque");
		proyectos.add("Mejoras en las calles");
		proyectos.add("Renovación de bancos");
	}
}
