package model;

public interface Observador {
    
    void display();

}
